# medelite-facility-report

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
medelite/: __init__.py  cms_client.py  config.py  mapping.py  models.py  normalize.py  presentation.py  qa.py  report.py  validation.py
medelite/export/: __init__.py  compare_pdf.py  docx.py  pdf.py
scripts/: verify.py
tests/: __init__.py  conftest.py  test_docx.py  test_metrics.py  test_normalize.py  test_pdf.py  test_presentation.py  test_property.py  test_qa.py  test_report.py  test_validation.py
